# BeautyDropAI

./: .dockerignore  .env  .gitignore  CI_CD_QUICKSTART.md  CI_CD_SETUP_NEEDED.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  Dockerfile  GITHUB_SECRETS_SETUP.md  POETRY_README.md  QUICKSTART.md  README.md  REDEPLOY_GUIDE.md  SETUP.md  check_output.txt  cloudbuild-staging.yaml  cloudbuild.yaml  debug_schedules.py  deploy-latest.sh  deploy-staging.sh  deploy.sh  pyproject.toml  requirements.txt  schema.yml  test_real_push.py  test_webhook.py  verify_roles_and_auth.py  worker_entrypoint.sh
.github/workflows/: README.md  ci-cd.yml  deploy.yml
apps/agent/: AI_AGENT_DOCUMENTATION.md  admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
apps/agent/migrations/: 0001_initial.py  0002_alter_chatsession_user.py
apps/agent/prompts/: system_prompts.py
apps/agent/services/: agent_controller.py  context_builder.py  embedding_service.py  pinecone_service.py  tool_executor.py
apps/agent/tools/: base.py  booking_tools.py  deal_tools.py  management_tools.py  schedule_tools.py  shop_tools.py  staff_tools.py
apps/authentication/: admin.py  apps.py  auth_backends.py  jwt_serializers.py  jwt_views.py  managers.py  middleware.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/authentication/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_remove_user_avatar_url_remove_user_date_joined_and_more.py  0004_user_is_staff_user_is_superuser_user_last_login.py  0005_user_password.py  0006_user_groups_user_user_permissions_and_more.py  0007_alter_user_role.py
apps/authentication/services/: clerk_api.py  clerk_service.py  token_service.py  user_data_service.py
apps/bookings/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/bookings/migrations/: 0001_initial.py  0002_allow_service_deletion.py  0002_booking_staff_member.py  0003_alter_booking_time_slot.py  0003_deal_booking_support.py  0004_add_cancelled_by_field.py  0004_advance_payments.py
apps/calendars/: __init__.py  admin.py  apps.py  google_calendar_service.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
apps/calendars/migrations/: 0001_initial.py  0002_change_calendar_event_to_foreignkey.py  __init__.py
apps/clients/: admin.py  models.py  serializers.py  urls.py  views.py
apps/clients/migrations/: 0001_initial.py  0002_add_scraping_limits.py  0002_update_user_fk_type.py  0003_alter_client_subscription_status.py
apps/contact_us/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/core/: apps.py  exceptions.py  messages.py  models.py  pagination.py  permissions.py  schema.py  serializers.py  urls.py  validators.py  views.py
apps/core/utils/: constants.py  (+1 more)
apps/customers/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/notifications/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
apps/payments/: admin.py  booking_payment_service.py  clerk_webhooks.py  connect_views.py  models.py  stripe_connect.py  stripe_service.py  stripe_webhooks.py  urls.py  webhook_views.py
apps/schedules/: admin.py  models.py  serializers.py  urls.py  views.py
apps/scraper/: admin.py  ai_parser.py  apps.py  models.py  scraper_service.py  serializers.py  tasks.py  urls.py  views.py
apps/services/: admin.py  models.py  serializers.py  urls.py  views.py
apps/shops/: admin.py  models.py  serializers.py  urls.py  views.py
apps/staff/: admin.py  apps.py  models.py  serializers.py  services.py  staff_views.py  urls.py  views.py
apps/subscriptions/: admin.py  models.py  serializers.py  subscription_service.py  urls.py  views.py
apps/voice/: FRONTEND_INTEGRATION.md  __init__.py  admin.py  apps.py  consumers.py  models.py  prompts.py  routing.py  signals.py  test_voice.html  voice_agents.py  voice_tool_registry.py
apps/widget/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py  testing.py
infrastructure/cache/: redis_client.py
scripts/: generate_app_files.py  generate_slots.py  seed_data.py  setup-cicd.sh  setup-workload-identity.sh
(+114 files in other folders)
